DFS is perfect!